# indexor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  start-db.sh
indexor/: indexor.py
indexor/bitcoin/: blockfetcher.py  rpc.py
indexor/config/: config.py
indexor/db/: db.py
indexor/indexer/: blockindexer.py  indexer.py  outputtypes.py  txindexer.py
notebooks/: nb.ipynb
